--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en-US">
 
 <!-- Mirrored from localhost:10010/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 23 Sep 2025 06:13:26 GMT -->
@@ -85,7 +85,7 @@ flexibility(document.documentElement);
 				}
 			</style>
 			<meta name="description" content="Annotation, transcription, and analysis services that turn complex data into clarity.">
-<style class="wpcode-css-snippet">/* ===== Astra (free) — flush logo/title/tagline to the left edge (desktop) ===== */
+<style class="wpcode-css-snippet">/* ===== Astra (free) â€” flush logo/title/tagline to the left edge (desktop) ===== */
 @media (min-width: 921px) {
   .ast-primary-header-bar .ast-container { 
     max-width: 100vw !important; 
@@ -101,7 +101,7 @@ flexibility(document.documentElement);
     padding-left: 0 !important;
   }
 
-  /* logo ↔ text spacing */
+  /* logo â†” text spacing */
   .ast-site-identity {
     display: flex;
     align-items: center;
@@ -119,14 +119,14 @@ flexibility(document.documentElement);
   }
 }
 
-/* ===== Mobile/Tablet (≤920px) ===== */
+/* ===== Mobile/Tablet (â‰¤920px) ===== */
 @media (max-width: 920px) {
   .ast-primary-header-bar .ast-container { 
     padding-left: 16px !important; 
   }
 }
 
-/* ===== Astra free — inline logo + title/tagline on tablet/mobile ===== */
+/* ===== Astra free â€” inline logo + title/tagline on tablet/mobile ===== */
 @media (max-width: 920px) {
   .ast-site-identity,
   .site-branding {
@@ -335,7 +335,7 @@ class="post-1448 page type-page status-publish ast-article-single" id="post-1448
 				<div class="elementor-element elementor-element-72f67b8 elementor-widget elementor-widget-text-editor" data-id="72f67b8" data-element_type="widget" data-widget_type="text-editor.default">
 									<div style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 16px; line-height: 1.6;">
   <p>
-    Raw data is transformed into actionable insights—analyzed with precision to uncover patterns, measure performance, and turn complexity into clarity that empowers organizations to adapt, optimize, and grow with confidence.
+    Raw data is transformed into actionable insightsâ€”analyzed with precision to uncover patterns, measure performance, and turn complexity into clarity that empowers organizations to adapt, optimize, and grow with confidence.
   </p>
 </div>
 								</div>
@@ -362,7 +362,7 @@ class="post-1448 page type-page status-publish ast-article-single" id="post-1448
 				<div class="elementor-element elementor-element-8155dd1 elementor-widget elementor-widget-text-editor" data-id="8155dd1" data-element_type="widget" data-widget_type="text-editor.default">
 									<div style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 16px; line-height: 1.6;">
   <p>
-    Spoken words are turned into clear, accurate text. From meetings and interviews to long recordings, transcription saves time and makes content easy to search, share, and use. No more replaying audio to catch details—share notes with your team and rely on accurate records you can trust. The typing is handled, so the focus stays on the work that matters.
+    Spoken words are turned into clear, accurate text. From meetings and interviews to long recordings, transcription saves time and makes content easy to search, share, and use. No more replaying audio to catch detailsâ€”share notes with your team and rely on accurate records you can trust. The typing is handled, so the focus stays on the work that matters.
   </p>
 </div>
 								</div>
@@ -402,7 +402,7 @@ class="post-1448 page type-page status-publish ast-article-single" id="post-1448
 				<div class="elementor-element elementor-element-8d1a47b elementor-widget elementor-widget-heading" data-id="8d1a47b" data-element_type="widget" data-widget_type="heading.default">
 					<h2 class="elementor-heading-title elementor-size-default">At a Glance</h2>				</div>
 				<div class="elementor-element elementor-element-2bed981 elementor-widget elementor-widget-text-editor" data-id="2bed981" data-element_type="widget" data-widget_type="text-editor.default">
-									<div style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 16px; line-height: 1.6;"><p>At Novimetrix, we help businesses unlock the power of their data. Our team delivers<br /><em>data analysis, annotation, and transcription services</em> designed to turn complex information into clear strategies.</p><h3 style="margin-top: 1.5em; margin-bottom: 1em; font-weight: bold; color: #f15808;">Why Choose Us</h3><p style="margin-bottom: 1em;"><strong>End-to-End Support</strong> – From accurate transcription and precise annotation to thoughtful analyses, we cover the essential steps that make data meaningful.</p><p style="margin-bottom: 1em;"><strong>Tailored to Your Needs</strong> – Whether you’re starting with unstructured information or refining established processes, our services adapt to your stage and goals.</p><p style="margin-bottom: 1em;"><strong>Clarity with Integrity</strong> – We deliver results that are transparent, consistent, and reliable — so you can act on them with confidence.</p><p style="margin-bottom: 1.5em;"><strong>Turning Data into Direction</strong> – By organizing, labeling, and analyzing data, we help you move from complexity to clarity, and from clarity to better decisions.</p><p>With us, you don’t just manage data — <em>you transform it into opportunity</em>.</p></div>								</div>
+									<div style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 16px; line-height: 1.6;"><p>At Novimetrix, we help businesses unlock the power of their data. Our team delivers<br /><em>data analysis, annotation, and transcription services</em> designed to turn complex information into clear strategies.</p><h3 style="margin-top: 1.5em; margin-bottom: 1em; font-weight: bold; color: #f15808;">Why Choose Us</h3><p style="margin-bottom: 1em;"><strong>End-to-End Support</strong> â€“ From accurate transcription and precise annotation to thoughtful analyses, we cover the essential steps that make data meaningful.</p><p style="margin-bottom: 1em;"><strong>Tailored to Your Needs</strong> â€“ Whether youâ€™re starting with unstructured information or refining established processes, our services adapt to your stage and goals.</p><p style="margin-bottom: 1em;"><strong>Clarity with Integrity</strong> â€“ We deliver results that are transparent, consistent, and reliable â€” so you can act on them with confidence.</p><p style="margin-bottom: 1.5em;"><strong>Turning Data into Direction</strong> â€“ By organizing, labeling, and analyzing data, we help you move from complexity to clarity, and from clarity to better decisions.</p><p>With us, you donâ€™t just manage data â€” <em>you transform it into opportunity</em>.</p></div>								</div>
 				</div>
 		<div class="elementor-element elementor-element-52da0ea e-con-full e-flex e-con e-child" data-id="52da0ea" data-element_type="container">
 				<div class="elementor-element elementor-element-16ef05d elementor-widget elementor-widget-spacer" data-id="16ef05d" data-element_type="widget" data-widget_type="spacer.default">
@@ -424,7 +424,7 @@ class="post-1448 page type-page status-publish ast-article-single" id="post-1448
 					<div class="e-con-inner">
 		<div class="elementor-element elementor-element-ca197bf e-con-full e-flex e-con e-child" data-id="ca197bf" data-element_type="container">
 				<div class="elementor-element elementor-element-d009038 elementor-widget elementor-widget-text-editor" data-id="d009038" data-element_type="widget" data-widget_type="text-editor.default">
-									<div style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 16px; line-height: 1.6;"><h3><span style="color: #f15808;">Why Trust Us?</span></h3><p><span style="color: #ffffff;">We know that choosing the right partner for your data needs is about more than just services—it’s about <em>reliability, clarity, and results</em>.</span></p><h4><span style="color: #ffffff;">Our Commitment</span></h4><p><span style="color: #ffffff;">We deliver <em>accurate, high-quality data analyses, annotation, transcription, and AI-driven solutions </em>that help you <em>save time, reduce errors, and focus on growth</em>.</span></p><h4><span style="color: #ffffff;">How We Work</span></h4><p><span style="color: #ffffff;">From the moment you share your data, we handle everything with precision and care. Our process is simple:</span></p><ul><li><span style="color: #ffffff;"><em>Step 1:</em> We receive your material (audio, documents, datasets).</span></li><li><span style="color: #ffffff;"><em>Step 2:</em> We process, refine, and structure it using proven methods.</span></li><li><span style="color: #ffffff;"><em>Step 3:</em> We deliver results you can use immediately to make better decisions.</span></li></ul><h4><span style="color: #ffffff;">Built on Integrity</span></h4><p><span style="color: #ffffff;">We value <em>transparency, confidentiality, and measurable outcomes</em>.</span><br /><span style="color: #ffffff;">With us, you can trust that your data is handled with care and your results are delivered with accuracy.</span></p><p><span style="color: #ffffff;"> </span></p><p><span style="color: #ffffff;"><strong>You don’t just get a service—you get a <em>partner</em>.</strong></span></p></div>								</div>
+									<div style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 16px; line-height: 1.6;"><h3><span style="color: #f15808;">Why Trust Us?</span></h3><p><span style="color: #ffffff;">We know that choosing the right partner for your data needs is about more than just servicesâ€”itâ€™s about <em>reliability, clarity, and results</em>.</span></p><h4><span style="color: #ffffff;">Our Commitment</span></h4><p><span style="color: #ffffff;">We deliver <em>accurate, high-quality data analyses, annotation, transcription, and AI-driven solutions </em>that help you <em>save time, reduce errors, and focus on growth</em>.</span></p><h4><span style="color: #ffffff;">How We Work</span></h4><p><span style="color: #ffffff;">From the moment you share your data, we handle everything with precision and care. Our process is simple:</span></p><ul><li><span style="color: #ffffff;"><em>Step 1:</em> We receive your material (audio, documents, datasets).</span></li><li><span style="color: #ffffff;"><em>Step 2:</em> We process, refine, and structure it using proven methods.</span></li><li><span style="color: #ffffff;"><em>Step 3:</em> We deliver results you can use immediately to make better decisions.</span></li></ul><h4><span style="color: #ffffff;">Built on Integrity</span></h4><p><span style="color: #ffffff;">We value <em>transparency, confidentiality, and measurable outcomes</em>.</span><br /><span style="color: #ffffff;">With us, you can trust that your data is handled with care and your results are delivered with accuracy.</span></p><p><span style="color: #ffffff;">Â </span></p><p><span style="color: #ffffff;"><strong>You donâ€™t just get a serviceâ€”you get a <em>partner</em>.</strong></span></p></div>								</div>
 				</div>
 					</div>
 				</div>
@@ -482,7 +482,7 @@ class="site-footer" id="colophon" itemtype="https://schema.org/WPFooter" itemsco
 											<div class="site-footer-primary-section-3 site-footer-section site-footer-section-3">
 								<div class="ast-builder-layout-element ast-flex site-footer-focus-item ast-footer-copyright" data-section="section-footer-builder">
 				<div class="ast-footer-copyright"><div style="text-align: center;color: #555">
-<div style="font-size: small;color: #000;margin-bottom: 2px">© 2025 <strong>Novimetrix</strong></div>
+<div style="font-size: small;color: #000;margin-bottom: 2px">Â© 2025 <strong>Novimetrix</strong></div>
 <div style="font-size: x-small;color: #555;line-height: 1.2">Novimetrix is the data services brand of</div>
 <div style="font-size: x-small;color: #555;line-height: 1.2"><strong>Green Ocean Consultants </strong></div>
 <div style="font-size: x-small;color: #555;line-height: 1.2">SPC Free Zone, UAE.</div>
@@ -548,3 +548,4 @@ var elementorFrontendConfig = {"environmentMode":{"edit":false,"wpPreview":false
 
 <!-- Mirrored from localhost:10010/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 23 Sep 2025 06:13:26 GMT -->
 </html>
+
