--- a/about/index.html
+++ b/about/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en-US">
 
 <!-- Mirrored from localhost:10010/about/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 23 Sep 2025 06:13:29 GMT -->
@@ -84,7 +84,7 @@ flexibility(document.documentElement);
 				}
 			</style>
 			<meta name="description" content="Annotation, transcription, and analysis services that turn complex data into clarity.">
-<style class="wpcode-css-snippet">/* ===== Astra (free) — flush logo/title/tagline to the left edge (desktop) ===== */
+<style class="wpcode-css-snippet">/* ===== Astra (free) â€” flush logo/title/tagline to the left edge (desktop) ===== */
 @media (min-width: 921px) {
   .ast-primary-header-bar .ast-container { 
     max-width: 100vw !important; 
@@ -100,7 +100,7 @@ flexibility(document.documentElement);
     padding-left: 0 !important;
   }
 
-  /* logo ↔ text spacing */
+  /* logo â†” text spacing */
   .ast-site-identity {
     display: flex;
     align-items: center;
@@ -118,14 +118,14 @@ flexibility(document.documentElement);
   }
 }
 
-/* ===== Mobile/Tablet (≤920px) ===== */
+/* ===== Mobile/Tablet (â‰¤920px) ===== */
 @media (max-width: 920px) {
   .ast-primary-header-bar .ast-container { 
     padding-left: 16px !important; 
   }
 }
 
-/* ===== Astra free — inline logo + title/tagline on tablet/mobile ===== */
+/* ===== Astra free â€” inline logo + title/tagline on tablet/mobile ===== */
 @media (max-width: 920px) {
   .ast-site-identity,
   .site-branding {
@@ -301,8 +301,8 @@ class="post-14 page type-page status-publish ast-article-single" id="post-14" it
   <p style="margin-bottom:20px;">
     Novimetrix was created with a simple idea: 
     <strong>information should empower, not overwhelm</strong>. 
-    We’re a team that values <strong>clarity, reliability, and trust</strong> above all else. 
-    Our work isn’t just about handling data — it’s about helping people and organizations see what truly matters, make decisions with confidence, and move forward with certainty.
+    Weâ€™re a team that values <strong>clarity, reliability, and trust</strong> above all else. 
+    Our work isnâ€™t just about handling data â€” itâ€™s about helping people and organizations see what truly matters, make decisions with confidence, and move forward with certainty.
   </p>
   <p style="margin-bottom:20px;">
     What defines us is not only <em>what</em> we do, but <em>how</em> we do it. 
@@ -336,7 +336,7 @@ class="post-14 page type-page status-publish ast-article-single" id="post-14" it
 		<div class="elementor-element elementor-element-e608bf1 e-flex e-con-boxed e-con e-parent" data-id="e608bf1" data-element_type="container">
 					<div class="e-con-inner">
 				<div class="elementor-element elementor-element-23cfef6 elementor-widget elementor-widget-text-editor" data-id="23cfef6" data-element_type="widget" data-widget_type="text-editor.default">
-									<div style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 16px; line-height: 1.8;"><h3 style="color: #f15808; margin: 0 0 12px;">Our Promise</h3><p>We believe clarity in information is essential for progress. Data, documents, and transcripts all carry critical value, and our role is to distill that value into outcomes you can act on with confidence.</p><p> </p><p>We promise to listen carefully, collaborate openly, and deliver work that reduces complexity, strengthens decision-making, and supports both your projects and the people behind them.</p><p> </p><p>Our team is dedicated to exceeding expectations, upholding the highest standards of quality and trust, and ensuring that every service we provide brings measurable clarity and meaningful results.</p></div>								</div>
+									<div style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 16px; line-height: 1.8;"><h3 style="color: #f15808; margin: 0 0 12px;">Our Promise</h3><p>We believe clarity in information is essential for progress. Data, documents, and transcripts all carry critical value, and our role is to distill that value into outcomes you can act on with confidence.</p><p>Â </p><p>We promise to listen carefully, collaborate openly, and deliver work that reduces complexity, strengthens decision-making, and supports both your projects and the people behind them.</p><p>Â </p><p>Our team is dedicated to exceeding expectations, upholding the highest standards of quality and trust, and ensuring that every service we provide brings measurable clarity and meaningful results.</p></div>								</div>
 					</div>
 				</div>
 		<div class="elementor-element elementor-element-9913187 e-con-full e-flex e-con e-parent" data-id="9913187" data-element_type="container" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
@@ -390,7 +390,7 @@ class="site-footer" id="colophon" itemtype="https://schema.org/WPFooter" itemsco
 											<div class="site-footer-primary-section-3 site-footer-section site-footer-section-3">
 								<div class="ast-builder-layout-element ast-flex site-footer-focus-item ast-footer-copyright" data-section="section-footer-builder">
 				<div class="ast-footer-copyright"><div style="text-align: center;color: #555">
-<div style="font-size: small;color: #000;margin-bottom: 2px">© 2025 <strong>Novimetrix</strong></div>
+<div style="font-size: small;color: #000;margin-bottom: 2px">Â© 2025 <strong>Novimetrix</strong></div>
 <div style="font-size: x-small;color: #555;line-height: 1.2">Novimetrix is the data services brand of</div>
 <div style="font-size: x-small;color: #555;line-height: 1.2"><strong>Green Ocean Consultants </strong></div>
 <div style="font-size: x-small;color: #555;line-height: 1.2">SPC Free Zone, UAE.</div>
@@ -456,3 +456,4 @@ var elementorFrontendConfig = {"environmentMode":{"edit":false,"wpPreview":false
 
 <!-- Mirrored from localhost:10010/about/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 23 Sep 2025 06:13:29 GMT -->
 </html>
+
