--- a/contact/index.html
+++ b/contact/index.html
@@ -81,7 +81,7 @@ flexibility(document.documentElement);
 				}
 			</style>
 			<meta name="description" content="Annotation, transcription, and analysis services that turn complex data into clarity.">
-<style class="wpcode-css-snippet">/* ===== Astra (free) ÃƒÂ¢Ã¢â€šÂ¬Ã¢â‚¬Â flush logo/title/tagline to the left edge (desktop) ===== */
+<style class="wpcode-css-snippet">/* ===== Astra (free) â€” flush logo/title/tagline to the left edge (desktop) ===== */
 @media (min-width: 921px) {
   .ast-primary-header-bar .ast-container { 
     max-width: 100vw !important; 
@@ -97,7 +97,7 @@ flexibility(document.documentElement);
     padding-left: 0 !important;
   }
 
-  /* logo ÃƒÂ¢Ã¢â‚¬Â Ã¢â‚¬Â text spacing */
+  /* logo â†” text spacing */
   .ast-site-identity {
     display: flex;
     align-items: center;
@@ -115,14 +115,14 @@ flexibility(document.documentElement);
   }
 }
 
-/* ===== Mobile/Tablet (ÃƒÂ¢Ã¢â‚¬Â°Ã‚Â¤920px) ===== */
+/* ===== Mobile/Tablet (â‰¤920px) ===== */
 @media (max-width: 920px) {
   .ast-primary-header-bar .ast-container { 
     padding-left: 16px !important; 
   }
 }
 
-/* ===== Astra free ÃƒÂ¢Ã¢â€šÂ¬Ã¢â‚¬Â inline logo + title/tagline on tablet/mobile ===== */
+/* ===== Astra free â€” inline logo + title/tagline on tablet/mobile ===== */
 @media (max-width: 920px) {
   .ast-site-identity,
   .site-branding {
@@ -454,8 +454,8 @@ Al Zahia, Sharjah, U.A.E.<br>
 
   <button type="submit">Send Message</button>
 
-  <p class="success-message">ÃƒÂ¢Ã…â€œÃ¢â‚¬Â¦ Thank you for contacting Novimetrix! Your message has been sent.</p>
-  <p class="error-message">ÃƒÂ¢Ã‚ÂÃ…â€™ Oops! Something went wrong. Please try again.</p>
+  <p class="success-message">âœ… Thank you for contacting Novimetrix! Your message has been sent.</p>
+  <p class="error-message">âŒ Oops! Something went wrong. Please try again.</p>
 </form>
 
 <script>
@@ -526,7 +526,7 @@ class="site-footer" id="colophon" itemtype="https://schema.org/WPFooter" itemsco
 											<div class="site-footer-primary-section-3 site-footer-section site-footer-section-3">
 								<div class="ast-builder-layout-element ast-flex site-footer-focus-item ast-footer-copyright" data-section="section-footer-builder">
 				<div class="ast-footer-copyright"><div style="text-align: center;color: #555">
-<div style="font-size: small;color: #000;margin-bottom: 2px">Ãƒâ€šÃ‚Â© 2025 <strong>Novimetrix</strong></div>
+<div style="font-size: small;color: #000;margin-bottom: 2px">Â© 2025 <strong>Novimetrix</strong></div>
 <div style="font-size: x-small;color: #555;line-height: 1.2">Novimetrix is the data services brand of</div>
 <div style="font-size: x-small;color: #555;line-height: 1.2"><strong>Green Ocean Consultants </strong></div>
 <div style="font-size: x-small;color: #555;line-height: 1.2">SPC Free Zone, UAE.</div>
