--- a/services/index.html
+++ b/services/index.html
@@ -81,7 +81,7 @@ flexibility(document.documentElement);
 				}
 			</style>
 			<meta name="description" content="Annotation, transcription, and analysis services that turn complex data into clarity.">
-<style class="wpcode-css-snippet">/* ===== Astra (free) ÃƒÂ¢Ã¢â€šÂ¬Ã¢â‚¬Â flush logo/title/tagline to the left edge (desktop) ===== */
+<style class="wpcode-css-snippet">/* ===== Astra (free) â€” flush logo/title/tagline to the left edge (desktop) ===== */
 @media (min-width: 921px) {
   .ast-primary-header-bar .ast-container { 
     max-width: 100vw !important; 
@@ -97,7 +97,7 @@ flexibility(document.documentElement);
     padding-left: 0 !important;
   }
 
-  /* logo ÃƒÂ¢Ã¢â‚¬Â Ã¢â‚¬Â text spacing */
+  /* logo â†” text spacing */
   .ast-site-identity {
     display: flex;
     align-items: center;
@@ -115,14 +115,14 @@ flexibility(document.documentElement);
   }
 }
 
-/* ===== Mobile/Tablet (ÃƒÂ¢Ã¢â‚¬Â°Ã‚Â¤920px) ===== */
+/* ===== Mobile/Tablet (â‰¤920px) ===== */
 @media (max-width: 920px) {
   .ast-primary-header-bar .ast-container { 
     padding-left: 16px !important; 
   }
 }
 
-/* ===== Astra free ÃƒÂ¢Ã¢â€šÂ¬Ã¢â‚¬Â inline logo + title/tagline on tablet/mobile ===== */
+/* ===== Astra free â€” inline logo + title/tagline on tablet/mobile ===== */
 @media (max-width: 920px) {
   .ast-site-identity,
   .site-branding {
@@ -313,38 +313,38 @@ class="post-15 page type-page status-publish ast-article-single" id="post-15" it
   <h3>Overview</h3>
   <p>
     Data is organized, reviewed, and interpreted to uncover patterns, identify challenges, and highlight opportunities.<br>
-    Through careful analysis, complexity becomes clarityÃƒÂ¢Ã¢â€šÂ¬Ã¢â‚¬Âgiving businesses the insight to make informed, confident decisions.
+    Through careful analysis, complexity becomes clarityâ€”giving businesses the insight to make informed, confident decisions.
   </p>
 
   <h3>Core Approaches</h3>
   <ul>
-    <li><strong>Descriptive Analysis</strong> ÃƒÂ¢Ã¢â€šÂ¬Ã¢â‚¬Å“ turning raw data into clear summaries and reports.</li>
-    <li><strong>Trend &#038; Performance Reviews</strong> ÃƒÂ¢Ã¢â€šÂ¬Ã¢â‚¬Å“ spotting changes over time and highlighting strengths or gaps.</li>
-    <li><strong>Root Cause Checks</strong> ÃƒÂ¢Ã¢â€šÂ¬Ã¢â‚¬Å“ examining the underlying reasons behind challenges.</li>
-    <li><strong>Decision Support</strong> ÃƒÂ¢Ã¢â€šÂ¬Ã¢â‚¬Å“ preparing insights that guide strategies, planning, and improvements.</li>
+    <li><strong>Descriptive Analysis</strong> â€“ turning raw data into clear summaries and reports.</li>
+    <li><strong>Trend &#038; Performance Reviews</strong> â€“ spotting changes over time and highlighting strengths or gaps.</li>
+    <li><strong>Root Cause Checks</strong> â€“ examining the underlying reasons behind challenges.</li>
+    <li><strong>Decision Support</strong> â€“ preparing insights that guide strategies, planning, and improvements.</li>
   </ul>
 
   <h3>Domains We Serve</h3>
 
   <h4>Business &#038; Finance</h4>
   <ul>
-    <li><strong>Market research &#038; consumer behavior</strong> ÃƒÂ¢Ã¢â€šÂ¬Ã¢â‚¬Å“ identify customer preferences, segment audiences, and refine strategies.</li>
-    <li><strong>Financial analysis</strong> ÃƒÂ¢Ã¢â€šÂ¬Ã¢â‚¬Å“ deliver forecasts, risk assessments, and fraud detection.</li>
-    <li><strong>Operations &#038; supply chain</strong> ÃƒÂ¢Ã¢â€šÂ¬Ã¢â‚¬Å“ optimize logistics, predict demand, and improve planning.</li>
+    <li><strong>Market research &#038; consumer behavior</strong> â€“ identify customer preferences, segment audiences, and refine strategies.</li>
+    <li><strong>Financial analysis</strong> â€“ deliver forecasts, risk assessments, and fraud detection.</li>
+    <li><strong>Operations &#038; supply chain</strong> â€“ optimize logistics, predict demand, and improve planning.</li>
   </ul>
 
   <h4>Healthcare &#038; Life Sciences</h4>
   <ul>
-    <li><strong>Medical research</strong> ÃƒÂ¢Ã¢â€šÂ¬Ã¢â‚¬Å“ analyze trial data and support drug development.</li>
-    <li><strong>Patient care</strong> ÃƒÂ¢Ã¢â€šÂ¬Ã¢â‚¬Å“ measure treatment outcomes and guide personalized care.</li>
-    <li><strong>Public health</strong> ÃƒÂ¢Ã¢â€šÂ¬Ã¢â‚¬Å“ track disease patterns and support health policy.</li>
+    <li><strong>Medical research</strong> â€“ analyze trial data and support drug development.</li>
+    <li><strong>Patient care</strong> â€“ measure treatment outcomes and guide personalized care.</li>
+    <li><strong>Public health</strong> â€“ track disease patterns and support health policy.</li>
   </ul>
 
   <h4>Government &#038; Policy</h4>
   <ul>
-    <li><strong>Smart city data</strong> ÃƒÂ¢Ã¢â€šÂ¬Ã¢â‚¬Å“ enhance mobility, energy, and safety with urban analytics.</li>
-    <li><strong>Policy development</strong> ÃƒÂ¢Ã¢â€šÂ¬Ã¢â‚¬Å“ base strategies on socioeconomic and demographic insights.</li>
-    <li><strong>Security &#038; defense</strong> ÃƒÂ¢Ã¢â€šÂ¬Ã¢â‚¬Å“ support intelligence and planning with reliable data.</li>
+    <li><strong>Smart city data</strong> â€“ enhance mobility, energy, and safety with urban analytics.</li>
+    <li><strong>Policy development</strong> â€“ base strategies on socioeconomic and demographic insights.</li>
+    <li><strong>Security &#038; defense</strong> â€“ support intelligence and planning with reliable data.</li>
   </ul>
 </div>
 								</div>
@@ -426,10 +426,10 @@ class="post-15 page type-page status-publish ast-article-single" id="post-15" it
 
   <h3>Transcription Services</h3>
   <ul>
-    <li><strong>Audio Transcription</strong> ÃƒÂ¢Ã¢â€šÂ¬Ã¢â‚¬Å“ converting voice recordings into accurate text.</li>
-    <li><strong>Video Transcription</strong> ÃƒÂ¢Ã¢â€šÂ¬Ã¢â‚¬Å“ subtitles and captions for accessibility and content reuse.</li>
-    <li><strong>Multilingual Support</strong> ÃƒÂ¢Ã¢â€šÂ¬Ã¢â‚¬Å“ transcription services in multiple languages.</li>
-    <li><strong>AI Training Datasets</strong> ÃƒÂ¢Ã¢â€šÂ¬Ã¢â‚¬Å“ structured transcripts tailored for machine learning models.</li>
+    <li><strong>Audio Transcription</strong> â€“ converting voice recordings into accurate text.</li>
+    <li><strong>Video Transcription</strong> â€“ subtitles and captions for accessibility and content reuse.</li>
+    <li><strong>Multilingual Support</strong> â€“ transcription services in multiple languages.</li>
+    <li><strong>AI Training Datasets</strong> â€“ structured transcripts tailored for machine learning models.</li>
   </ul>
 </div>
 								</div>
@@ -448,7 +448,7 @@ class="post-15 page type-page status-publish ast-article-single" id="post-15" it
 		</div>
 						</div>
 				<div class="elementor-element elementor-element-3a67c53 elementor-widget elementor-widget-text-editor" data-id="3a67c53" data-element_type="widget" data-widget_type="text-editor.default">
-									<h3 style="color: #f15808;">Our Promise</h3><p>We promise to make information clearer, decisions stronger, and outcomes more meaningfulÃƒÂ¢Ã¢â€šÂ¬Ã¢â‚¬Âalways with quality, trust, and collaboration at the core.</p>								</div>
+									<h3 style="color: #f15808;">Our Promise</h3><p>We promise to make information clearer, decisions stronger, and outcomes more meaningfulâ€”always with quality, trust, and collaboration at the core.</p>								</div>
 				<div class="elementor-element elementor-element-5f183df elementor-widget elementor-widget-spacer" data-id="5f183df" data-element_type="widget" data-widget_type="spacer.default">
 							<div class="elementor-spacer">
 			<div class="elementor-spacer-inner"></div>
@@ -501,7 +501,7 @@ class="site-footer" id="colophon" itemtype="https://schema.org/WPFooter" itemsco
 											<div class="site-footer-primary-section-3 site-footer-section site-footer-section-3">
 								<div class="ast-builder-layout-element ast-flex site-footer-focus-item ast-footer-copyright" data-section="section-footer-builder">
 				<div class="ast-footer-copyright"><div style="text-align: center;color: #555">
-<div style="font-size: small;color: #000;margin-bottom: 2px">Ãƒâ€šÃ‚Â© 2025 <strong>Novimetrix</strong></div>
+<div style="font-size: small;color: #000;margin-bottom: 2px">Â© 2025 <strong>Novimetrix</strong></div>
 <div style="font-size: x-small;color: #555;line-height: 1.2">Novimetrix is the data services brand of</div>
 <div style="font-size: x-small;color: #555;line-height: 1.2"><strong>Green Ocean Consultants </strong></div>
 <div style="font-size: x-small;color: #555;line-height: 1.2">SPC Free Zone, UAE.</div>
