--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 
-<!-- Mirrored from localhost:10010/about/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 26 Sep 2025 03:36:15 GMT -->
+<!-- Mirrored from localhost:10010/about/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 27 Sep 2025 02:27:00 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
 <meta charset="UTF-8">
@@ -292,24 +292,18 @@ class="post-14 page type-page status-publish ast-article-single" id="post-14" it
 						</div>
 		<div class="elementor-element elementor-element-62edd7d e-con-full e-flex e-con e-child" data-id="62edd7d" data-element_type="container">
 				<div class="elementor-element elementor-element-61d0285 elementor-widget elementor-widget-text-editor" data-id="61d0285" data-element_type="widget" data-widget_type="text-editor.default">
-									<div style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-size:16px; line-height:1.8;">
-  <p style="margin-bottom:20px;">
-    Novimetrix was created with a simple idea: 
-    <strong>information should empower, not overwhelm</strong>. 
-    We’re a team that values <strong>clarity, reliability, and trust</strong> above all else. 
-    Our work isn’t just about handling data — it’s about helping people and organizations see what truly matters, make decisions with confidence, and move forward with certainty.
-  </p>
-  <p style="margin-bottom:20px;">
-    What defines us is not only <em>what</em> we do, but <em>how</em> we do it. 
-    We approach every project with <strong>patience, precision, and care</strong>, 
-    working alongside our clients as partners rather than vendors. 
-    That spirit of collaboration is what allows us to deliver work that is not only accurate, but genuinely meaningful.
-  </p>
-  <p>
-    At our core, Novimetrix is about building lasting relationships where information becomes a shared strength.
-  </p>
-</div>
-								</div>
+									<div style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 16px; line-height: 1.8;">
+<p style="margin-bottom: 20px;">Novimetrix was created with a simple idea:
+<strong>information should empower, not overwhelm</strong>.
+We’re a team that values <strong>clarity, reliability, and trust</strong> above all else.
+Our work isn’t just about handling data — it’s about helping people and organizations see what truly matters, make decisions with confidence, and move forward with certainty.</p>
+<p style="margin-bottom: 20px;">What defines us is not only <em>what</em> we do, but <em>how</em> we do it.
+We approach every project with <strong>patience, precision, and care</strong>,
+working alongside our clients as partners rather than vendors.
+That spirit of collaboration is what allows us to deliver work that is not only accurate, but genuinely meaningful.</p>
+At our core, Novimetrix is about building lasting relationships where information becomes a shared strength.
+
+</div>								</div>
 				</div>
 					</div>
 				</div>
@@ -454,5 +448,5 @@ var starter_templates_zip_preview = {"AstColorPaletteVarPrefix":"--ast-global-co
 			</script>
 				</body>
 
-<!-- Mirrored from localhost:10010/about/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 26 Sep 2025 03:36:15 GMT -->
+<!-- Mirrored from localhost:10010/about/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 27 Sep 2025 02:27:00 GMT -->
 </html>
