CSS to disable link email in mobile

--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 
-<!-- Mirrored from localhost:10010/about/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 01 Oct 2025 23:39:24 GMT -->
+<!-- Mirrored from localhost:10010/about/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 01 Oct 2025 23:47:31 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
 <meta charset="UTF-8">
@@ -80,7 +80,18 @@ flexibility(document.documentElement);
 				}
 			</style>
 			<meta name="description" content="Annotation, transcription, and analysis services that turn complex data into clarity.">
-<style class="wpcode-css-snippet">/* ===== Astra (free) — flush logo/title/tagline to the left edge (desktop) ===== */
+<style class="wpcode-css-snippet">/* Disable clicks only on email icon/widget */
+.no-click-email {
+  pointer-events: none !important;
+  cursor: default !important;
+}
+
+/* Allow links inside (like phone) if ever nested */
+.no-click-email a {
+  pointer-events: auto !important;
+  cursor: pointer !important;
+}
+</style><style class="wpcode-css-snippet">/* ===== Astra (free) — flush logo/title/tagline to the left edge (desktop) ===== */
 @media (min-width: 921px) {
   .ast-primary-header-bar .ast-container { 
     max-width: 100vw !important; 
@@ -464,5 +475,5 @@ var starter_templates_zip_preview = {"AstColorPaletteVarPrefix":"--ast-global-co
 			</script>
 				</body>
 
-<!-- Mirrored from localhost:10010/about/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 01 Oct 2025 23:39:24 GMT -->
+<!-- Mirrored from localhost:10010/about/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 01 Oct 2025 23:47:31 GMT -->
 </html>
