--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 
-<!-- Mirrored from localhost:10010/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 02 Oct 2025 00:02:38 GMT -->
+<!-- Mirrored from localhost:10010/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 02 Oct 2025 00:05:23 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
 <meta charset="UTF-8">
@@ -81,17 +81,7 @@ flexibility(document.documentElement);
 				}
 			</style>
 			<meta name="description" content="Annotation, transcription, and analysis services that turn complex data into clarity.">
-<style class="wpcode-css-snippet">@media (max-width: 768px) {
-  /* disable only these mailto links on mobile (case-insensitive) */
-  a[href^="mailto:info@novimetrix.com" i],
-  a[href^="mailto:info@greenoceanconsultants.com" i]{
-    pointer-events: none !important;
-    cursor: default !important;
-    text-decoration: none !important;
-    color: inherit !important;
-  }
-}
-</style><style class="wpcode-css-snippet">/* ===== Astra (free) — flush logo/title/tagline to the left edge (desktop) ===== */
+<style class="wpcode-css-snippet">/* ===== Astra (free) — flush logo/title/tagline to the left edge (desktop) ===== */
 @media (min-width: 921px) {
   .ast-primary-header-bar .ast-container { 
     max-width: 100vw !important; 
@@ -532,5 +522,5 @@ var starter_templates_zip_preview = {"AstColorPaletteVarPrefix":"--ast-global-co
 			</script>
 				</body>
 
-<!-- Mirrored from localhost:10010/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 02 Oct 2025 00:02:38 GMT -->
+<!-- Mirrored from localhost:10010/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 02 Oct 2025 00:05:23 GMT -->
 </html>
